# 3sem-lab-oop

./: CMakeLists.txt  cardioid.cpp  cardioid.h  cardioid.hpp  main.cpp  test.cpp
catch2/: CMakeLists.txt  catch.cpp
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
